updatin simple html

--- a/simple.html
+++ b/simple.html
@@ -18,6 +18,7 @@ MORE CHANGES
 	<!-- Content Goes Here -->
 		<p>
 			Practice content
+			Adding text to practice
 		</p>
 	</main>
 	<footer class="container">
