--- a/simple.html
+++ b/simple.html
@@ -15,10 +15,9 @@ MORE CHANGES
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
 		<p>
 			Practice content
-			Adding text to practice
+Update title for stash example
 		</p>
 	</main>
 	<footer class="container">
