changes some texts

--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,7 @@ MORE CHANGES
 	<main class="container">
 		<p>
 			Practice content
-Update title for stash example
+			Update title for staash branch
 		</p>
 	</main>
 	<footer class="container">
